--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -1,14 +1,6 @@
-/**
-* Template Name: NiceAdmin
-* Updated: Jan 27 2024 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
+.card-body{
+  overflow-x: auto;
+}
 :root {
   scroll-behavior: smooth;
 }
